/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package adaptateur;

/**
 *
 * @author M34LMAR
 */
public class PortableSamSaoule {
    public void ChargerPortable(int volts)
    {
        System.out.print("Portable SamSaoule en charge");
        System.out.println("voltage : "+ volts);
    }
}
