/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package adaptateur;

/**
 *
 * @author M34LMAR
 */
public class PortableSonneEricSonne {

    public void ChargerBatteries(int volts)
    {
        System.out.println("Portable SonneEricSonne en charge");
        System.out.print("voltage : "+ volts);
    }
}
