/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.abstractfactory.usine;

import dp.abstractfactory.PneuSport;

/**
 *
 * @author 33676
 */
public class PneuSportMichelin implements PneuSport {

    public PneuSportMichelin() {
    }

    @Override
    public String toString() {
        return "PneuSportMichelin{" + '}';
    }
    
    
}
