/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.composite;

/**
 *
 * @author 33676
 */
public abstract class Cellulose {
    public abstract void afficheToi();
}
