/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.composite;

/**
 *
 * @author 33676
 */
public class Feuille extends Cellulose{

    @Override
    public void afficheToi() {
        System.out.println("\t \t Feuille");
    }
    
}
