/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package dp.diapo;

/**
 *
 * @author 33676
 */
public class Morillon implements EmissionSonore{

    @Override
    public void emetUnSon() {
        System.out.println("Coinn Coinn");
    }
    
}
